kubernetes-manifests/chat-deployment.yaml
# chat-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
      - name: chat
        image: kubeguardian/chat:latest   # Replace with your built Docker image
        imagePullPolicy: IfNotPresent

        ports: 
          - containerPort: 8000
