kubernetes-manifests/publisher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: publisher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: publisher
  template:
    metadata:
      labels:
        app: publisher
    spec:
      serviceAccountName: publisher-sa
      containers:
      - name: publisher
        image: kubeguardian/publisher:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8082
