kubernetes-manifests/subscriber.yaml
# chat-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: subscriber
spec:
  replicas: 1
  selector:
    matchLabels:
      app: subscriber
  template:
    metadata:
      labels:
        app: subscriber
    spec:
      tolerations:
        - key: "cloud.google.com/gke-preemptible"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
      nodeSelector:
        cloud.google.com/gke-preemptible: "true"
      containers:
      - name: subscriber
        image:  muhammadolammi/kubeguardian-sub
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"

        ports: 
          - containerPort: 8083
