kubernetes-manifests/subsriber.yaml
# chat-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: subscriber
spec:
  replicas: 1
  selector:
    matchLabels:
      app: subscriber
  template:
    metadata:
      labels:
        app: subscriber
    spec:
      containers:
      - name: subscriber
        image: kubeguardian/subscriber:latest   # Replace with your built Docker image
        imagePullPolicy: IfNotPresent

        ports: 
          - containerPort: 8083
