kubernetes-manifests/agent.yaml
# ai-agent-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ai-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-agent
  template:
    metadata:
      labels:
        app: ai-agent
    spec:
      containers:
      - name: ai-agent
        image: kubeguardian/agent:latest   # Your AI agent Docker image
        imagePullPolicy: IfNotPresent

        ports: 
          - containerPort: 8081 
---

# ai-agent-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-agent
spec:
  selector:
    app: ai-agent
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
