kubernetes-manifests/custom-mcp-server.yaml
# ai-agent-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: custom-mcp-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: custom-mcp-server
  template:
    metadata:
      labels:
        app: custom-mcp-server
    spec:
      containers:
      - name: custom-mcp-server
        image: kubeguardian/custom-mcp-server:latest   
        imagePullPolicy: IfNotPresent

        ports: 
          - containerPort: 8086
---

# ai-agent-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-mcp-server
spec:
  selector:
    app: custom-mcp-server
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8086
  type: ClusterIP
