kubernetes-manifests/kubectl-ai.yaml



apiVersion: apps/v1
kind: Deployment

metadata:
  name: kubectl-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubectl-ai
  template:
    metadata:
      labels:
        app: kubectl-ai
    spec:
      serviceAccountName: kubectl-ai-sa
      containers:
      - name: kubectl-ai
        image: muhammadolammi/kubeguardian:kubectl-ai:latest   
        imagePullPolicy: IfNotPresent
        args:
          - "--mcp-server"
          - "--mcp-server-mode=sse"
          - "--sse-endpoint-port=8085"
          - "-v=2"
        

        ports: 
          - containerPort: 8085
---

# ai-agent-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubectl-ai
spec:
  selector:
    app: kubectl-ai
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
  type: ClusterIP
