kubernetes-manifests/mcp-server.yaml
# ai-agent-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mcp-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mcp-server
  template:
    metadata:
      labels:
        app: mcp-server
    spec:
      containers:
      - name: mcp-server
        image: kubeguardian/mcp-server:latest   
        imagePullPolicy: IfNotPresent

        ports: 
          - containerPort: 8086
---

# ai-agent-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mcp-server
spec:
  selector:
    app: mcp-server
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8086
  type: ClusterIP
