kubernetes-manifests/network.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    networking.gke.io/managed-certificates: "frontend-cert"
spec:
  ingressClassName: gce
  rules:
    - host: kubeguardian.qtechconsults.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
    - host: agent.qtechconsults.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: agent
                port:
                  number: 8081
